--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,7 @@
         <div class="ml-1">
             <h1>The Best Pomodoro Timer</h1>
             <h3 id="pomodoro-timer" class="p-3">25:00</h3>
-            <input id="task-to-complete" type="text">
+            Task Name: <input id="task-to-complete" type="text">
     
             <div id="timer-options">
                 <div>
